@@ -34,17 +34,20 @@ pocc_driver_candl (scoplib_scop_p program,
 		   s_pocc_options_t* poptions,
 		   s_pocc_utils_options_t* puoptions)
 {
-  if (! poptions->quiet)
-    printf ("[PoCC] Running Candl\n");
-  CandlOptions* coptions = candl_options_malloc ();
-  CandlProgram* cprogram = candl_program_convert_scop (program, NULL);
-  CandlDependence* deps = candl_dependence (cprogram, coptions);
-  if (poptions->verbose)
-    candl_dependence_pprint (stdout, deps);
-  // Embed dependences in the scop, in case we want pluto to read them.
-  if (poptions->pluto_external_candl)
-    candl_dependence_update_scop_with_deps (program, deps);
-  
-  candl_dependence_free (deps);
-  candl_options_free (coptions);
+  if (poptions->candl_pass)
+    {
+      if (! poptions->quiet)
+	printf ("[PoCC] Running Candl\n");
+      CandlOptions* coptions = candl_options_malloc ();
+      CandlProgram* cprogram = candl_program_convert_scop (program, NULL);
+      CandlDependence* deps = candl_dependence (cprogram, coptions);
+      if (poptions->verbose)
+	candl_dependence_pprint (stdout, deps);
+      // Embed dependences in the scop, in case we want pluto to read them.
+      if (poptions->pluto_external_candl)
+	candl_dependence_update_scop_with_deps (program, deps);
+
+      candl_dependence_free (deps);
+      candl_options_free (coptions);
+    }
 }
