@@ -38,7 +38,9 @@ static const struct s_opt       opts[POCC_NB_OPTS] =
   { '\0', "bounded-ctxt", 0, "\tParser: bound all global parameters >= -1" },
   { '\0', "default-ctxt", 0, "\tParser: bound all global parameters >= 32" },
   { '\0', "inscop-fakearray", 0, "Parser: use FAKEARRAY[i] to explicitly declare\n\t\t\t\twrite dependences" },
-  { '\0', "read-scop", 0, "\tParser: read SCoP file instead of C file\n\t\t\t\tas input" },
+  { '\0', "read-scop", 0, "\tParser: read SCoP file instead of C file\n\t\t\t\tas input\n" },
+  { '\0', "no-candl", 0, "\tDependence analysis: don't run candl [off]\n" },
+
   { 'd', "delete-files", 0, "\tDelete files previously generated by PoCC [off]\n" },
   { '\0', "verbose", 0, "\tVerbose output [off]" },
   { '\0', "quiet", 0, "\tMinimal output [off]\n" },
@@ -234,6 +236,10 @@ pocc_getopts (s_pocc_options_t* options, int argc, char** argv)
     options->inscop_fakepoccarray = 1;
   if (opt_tab[POCC_OPT_READ_SCOP_FILE])
     options->read_input_scop_file = 1;
+
+  // Dependence analysis.
+  if (opt_tab[POCC_OPT_NO_CANDL])
+    options->candl_pass = 0;
 
   // Trash.
   if (opt_tab[POCC_OPT_TRASH])
