@@ -35,7 +35,7 @@
 # include "getopts.h"
 
 
-# define POCC_NB_OPTS				55
+# define POCC_NB_OPTS				56
 
 
 # define POCC_OPT_HELP				0
@@ -46,57 +46,59 @@
 # define POCC_OPT_INSCOP_FAKEARRAY		5
 # define POCC_OPT_READ_SCOP_FILE		6
 
-# define POCC_OPT_TRASH				7
-# define POCC_OPT_VERBOSE			8
-# define POCC_OPT_QUIET				9
+# define POCC_OPT_NO_CANDL			7
 
-# define POCC_OPT_LETSEE			10
-# define POCC_OPT_LETSEE_SEARCHSPACE		11
-# define POCC_OPT_LETSEE_TRAVERSAL		12
-# define POCC_OPT_LETSEE_DRY_RUN          	13
-# define POCC_OPT_LETSEE_NORMSPACE		14
-# define POCC_OPT_LETSEE_BOUNDS			15
-# define POCC_OPT_LETSEE_SCHEME_M1		16
-# define POCC_OPT_LETSEE_RTRIES			17
-# define POCC_OPT_LETSEE_PRUNE_PRECUT		18
-# define POCC_OPT_LETSEE_BACKTRACK_MULTI	19
+# define POCC_OPT_TRASH				8
+# define POCC_OPT_VERBOSE			9
+# define POCC_OPT_QUIET				10
 
-# define POCC_OPT_PLUTO				20
-# define POCC_OPT_PLUTO_PARALLEL		21
-# define POCC_OPT_PLUTO_TILE			22
-# define POCC_OPT_PLUTO_L2TILE			23
-# define POCC_OPT_PLUTO_FUSE			24
-# define POCC_OPT_PLUTO_UNROLL			25
-# define POCC_OPT_PLUTO_UFACTOR			26
-# define POCC_OPT_PLUTO_POLYUNROLL		27
-# define POCC_OPT_PLUTO_PREVECTOR		28
-# define POCC_OPT_PLUTO_MULTIPIPE		29
-# define POCC_OPT_PLUTO_RAR			30
-# define POCC_OPT_PLUTO_LASTWRITER		31
-# define POCC_OPT_PLUTO_SCALPRIV		32
-# define POCC_OPT_PLUTO_BEE			33
-# define POCC_OPT_PLUTO_QUIET			34
-# define POCC_OPT_PLUTO_FT			35
-# define POCC_OPT_PLUTO_LT			36
-# define POCC_OPT_PLUTO_EXTERNAL_CANDL	       	37
+# define POCC_OPT_LETSEE			11
+# define POCC_OPT_LETSEE_SEARCHSPACE		12
+# define POCC_OPT_LETSEE_TRAVERSAL		13
+# define POCC_OPT_LETSEE_DRY_RUN          	14
+# define POCC_OPT_LETSEE_NORMSPACE		15
+# define POCC_OPT_LETSEE_BOUNDS			16
+# define POCC_OPT_LETSEE_SCHEME_M1		17
+# define POCC_OPT_LETSEE_RTRIES			18
+# define POCC_OPT_LETSEE_PRUNE_PRECUT		19
+# define POCC_OPT_LETSEE_BACKTRACK_MULTI	20
 
-# define POCC_OPT_NOCODEGEN			38
-# define POCC_OPT_CLOOG_F			39
-# define POCC_OPT_CLOOG_L			40
-# define POCC_OPT_PRAGMATIZER			41
-# define POCC_OPT_VECTORIZER			42
-# define POCC_OPT_VECT_MARK_PAR_LOOPS    	43
-# define POCC_OPT_VECT_NO_KEEP_OUTER_PAR_LOOPS  44
-# define POCC_OPT_STORCOMPACT			45
-# define POCC_OPT_AC_KEEP_OUTERPAR		46
-# define POCC_OPT_AC_KEEP_VECTORIZED		47
-# define POCC_OPT_CODEGEN_TIMERCODE		48
-# define POCC_OPT_CODEGEN_TIMER_ASM		49
-# define POCC_OPT_CODEGEN_TIMER_PAPI		50
-# define POCC_OPT_COMPILE      			51
-# define POCC_OPT_COMPILE_CMD          		52
-# define POCC_OPT_RUN_CMD_ARGS          	53
-# define POCC_OPT_PROGRAM_TIMEOUT        	54
+# define POCC_OPT_PLUTO				21
+# define POCC_OPT_PLUTO_PARALLEL		22
+# define POCC_OPT_PLUTO_TILE			23
+# define POCC_OPT_PLUTO_L2TILE			24
+# define POCC_OPT_PLUTO_FUSE			25
+# define POCC_OPT_PLUTO_UNROLL			26
+# define POCC_OPT_PLUTO_UFACTOR			27
+# define POCC_OPT_PLUTO_POLYUNROLL		28
+# define POCC_OPT_PLUTO_PREVECTOR		29
+# define POCC_OPT_PLUTO_MULTIPIPE		30
+# define POCC_OPT_PLUTO_RAR			31
+# define POCC_OPT_PLUTO_LASTWRITER		32
+# define POCC_OPT_PLUTO_SCALPRIV		33
+# define POCC_OPT_PLUTO_BEE			34
+# define POCC_OPT_PLUTO_QUIET			35
+# define POCC_OPT_PLUTO_FT			36
+# define POCC_OPT_PLUTO_LT			37
+# define POCC_OPT_PLUTO_EXTERNAL_CANDL	       	38
+
+# define POCC_OPT_NOCODEGEN			39
+# define POCC_OPT_CLOOG_F			40
+# define POCC_OPT_CLOOG_L			41
+# define POCC_OPT_PRAGMATIZER			42
+# define POCC_OPT_VECTORIZER			43
+# define POCC_OPT_VECT_MARK_PAR_LOOPS    	44
+# define POCC_OPT_VECT_NO_KEEP_OUTER_PAR_LOOPS  45
+# define POCC_OPT_STORCOMPACT			46
+# define POCC_OPT_AC_KEEP_OUTERPAR		47
+# define POCC_OPT_AC_KEEP_VECTORIZED		48
+# define POCC_OPT_CODEGEN_TIMERCODE		49
+# define POCC_OPT_CODEGEN_TIMER_ASM		50
+# define POCC_OPT_CODEGEN_TIMER_PAPI		51
+# define POCC_OPT_COMPILE      			52
+# define POCC_OPT_COMPILE_CMD          		53
+# define POCC_OPT_RUN_CMD_ARGS          	54
+# define POCC_OPT_PROGRAM_TIMEOUT        	55
 
 
 BEGIN_C_DECLS
